# provizio_radar_api_core

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.bat  build.sh  check_license_headers.sh  ci.yml  coverage.sh  install_dependencies.sh  sudo.sh  test.bat  test.sh
include/provizio/: common.h  socket.h  util.h
include/provizio/radar_api/: common.h  core.h  errno.h  radar_api_context.h  radar_ego_motion.h  radar_modes.h  radar_point_cloud.h  radar_points_accumulation.h  radar_points_accumulation_filters.h  radar_points_accumulation_types.h  radar_position.h  radar_ranges.h
src/: common.c  core.c  radar_api_context.c  radar_ego_motion.c  radar_point_cloud.c  radar_points_accumulation.c  radar_points_accumulation_filters.c  radar_points_accumulation_types.c  socket.c  util.c
test/: CMakeLists.txt
test/c_99/: CMakeLists.txt
test/c_99/src/: test_common.c  test_core.c  test_main.c  test_radar_point_cloud.c  test_radar_points_accumulation.c  test_radar_points_accumulation_filters.c  test_radar_points_accumulation_types.c  test_util.c
test/cpp_14/: CMakeLists.txt
test/cpp_14/src/: smoketest.cpp  test_core.cpp
test/include/: test_point_cloud_callbacks.h  unity_config.h
